# libmrss

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  mrss.pc.in
debian/: changelog  control  copyright  libmrss0-dev.examples  libmrss0-dev.install  libmrss0.install  rules  watch
debian/patches/: README.diff  series
doc/: Makefile.am  Makefile.in  main.doxy
phpmrss/: Makefile.in  all.php  mrss.ini  php.c
src/: Makefile.am  Makefile.in  mrss.h.in  mrss_download.c  mrss_edit.c  mrss_free.c  mrss_generic.c  mrss_internal.h  mrss_options.c  mrss_parser.c  mrss_search.c  mrss_write.c
test/: Makefile.am  Makefile.in  new.c
